# llvm-project

build_script/: generate_project.bat
clang-tools-extra/clang-tidy/: CMakeLists.txt  ClangTidyForceLinker.h
clang-tools-extra/clang-tidy/evolution/: AssertUsageCheck.cpp  AssertUsageCheck.h  CMakeLists.txt  ContainerFirstElementAccessCheck.cpp  ContainerFirstElementAccessCheck.h  EvolutionModule.cpp  OverloadingWithVirtualCheck.cpp  OverloadingWithVirtualCheck.h  ProTypeMemberInitCheck.cpp  ProTypeMemberInitCheck.h  SymbolNonCopyingConstructorCheck.cpp  SymbolNonCopyingConstructorCheck.h  TypeMemberAssignCheck.cpp  TypeMemberAssignCheck.h  ZeroVectorInitCheck.cpp  ZeroVectorInitCheck.h
clang-tools-extra/clang-tidy/plugin/: CMakeLists.txt
clang-tools-extra/clang-tidy/tool/: CMakeLists.txt
clang-tools-extra/docs/clang-tidy/checks/: evolution-pro-type-member-init.rst  list.rst
llvm/utils/gn/secondary/clang-tools-extra/clang-tidy/: BUILD.gn
llvm/utils/gn/secondary/clang-tools-extra/clang-tidy/evolution/: BUILD.gn
